--- a/grandtrip/public/wwwroot/custom.css
+++ b/grandtrip/public/wwwroot/custom.css
@@ -90,7 +90,6 @@ body {
     overflow-y: scroll;
     flex: 1;
     height: 100%;
-    background: linear-gradient(100deg, rgba(131, 58, 180, 1) 0%, rgba(189, 58, 88, 1) 24%, rgba(255, 157, 18, 1) 100%);
 }
 
 #mapDiv {
@@ -210,6 +209,18 @@ nav {
 
 .route-btn:hover {
     background-color: rgb(78, 123, 117)
+}
+
+.constructor-button {
+    background-color: rgb(124, 193, 184);
+    color: white;
+    border: 3px solid white;
+    width: 100%;
+    transition: background-color 750ms;
+}
+
+.constructor-button:hover {
+    background-color: rgb(78, 123, 117);
 }
 
 .route-div {
