--- a/grandtrip/public/wwwroot/custom.css
+++ b/grandtrip/public/wwwroot/custom.css
@@ -121,7 +121,7 @@
     }
     
     #cont {
-        text-align: center;
+        /*text-align: center;*/
         width: 100%;
         height: 100%;
         /*background: linear-gradient(100deg, rgba(131, 58, 180, 1) 0%, rgba(189, 58, 88, 1) 24%, rgba(255, 157, 18, 1) 100%);*/
