Изменения на фронте

--- a/grandtrip/src/styles/style.css
+++ b/grandtrip/src/styles/style.css
@@ -146,7 +146,7 @@ p {
     font-family: "Fira Sans Condensed";
     color: #4356FF;
     font-weight: 800;
-    font-style: italic;
+    /*font-style: italic;*/
 }
 
 .button {
@@ -449,7 +449,7 @@ p {
 }
 
 .steps-section {
-    background: url("../img/steps-section-bg.png"), #F1F1F1;
+    background: url(../img/steps-section-bg.png), #F1F1F1;
     background-repeat: no-repeat;
     background-position: calc(50% - 20px) 0;
     background-size: auto;
