--- a/grandtrip/public/wwwroot/custom.css
+++ b/grandtrip/public/wwwroot/custom.css
@@ -254,14 +254,16 @@
     .route-btn {
         width: 100%;
         color: white;
-        background-color: rgb(161, 194, 209);
-        border: 3px solid white;
-        border-bottom: none;
+        background-color: #4356FF;
+        padding: 5px;
+        border-radius: 5px;
+        margin-top: 10px;
+        margin-bottom: 10px;
         transition: background-color 750ms;
     }
     
     .route-btn:hover {
-        background-color: rgb(136, 163, 176)
+        background-color: #0d25ff
     }
     
     .constructor-button {
