--- a/grandtrip/src/styles/style.css
+++ b/grandtrip/src/styles/style.css
@@ -800,7 +800,7 @@ select.field {
     padding: 15px;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    /*display: flex;*/
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
@@ -811,7 +811,7 @@ select.field {
     position: absolute;
     left: 0;
     top: 70px;
-    height: calc(100% - 70px);
+    /*height: calc(100% - 70px);*/
     background: rgba(216, 216, 216, 0.7);
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
