--- a/grandtrip/src/styles/style.css
+++ b/grandtrip/src/styles/style.css
@@ -221,7 +221,7 @@ form {
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.25);
     background-color: white;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     z-index: 10;
 }
 
