--- a/grandtrip/src/styles/style.css
+++ b/grandtrip/src/styles/style.css
@@ -801,7 +801,7 @@ select.field {
     padding: 15px;
     display: -webkit-box;
     display: -ms-flexbox;
-    /*display: flex;*/
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
@@ -809,10 +809,13 @@ select.field {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    position: absolute;
+    /*position: absolute;*/
     left: 0;
     top: 70px;
-    /*height: calc(100% - 70px);*/
+    overflow-x: hidden;
+    overflow-y: scroll;
+    flex: 1;
+    height: 100%;
     background: rgba(216, 216, 216, 0.7);
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
