--- a/grandtrip/src/styles/style.css
+++ b/grandtrip/src/styles/style.css
@@ -97,6 +97,7 @@ button,
 input,
 option {
     border-radius: unset;
+    -webkit-appearance: none !important;
     background: unset;
     background-color: unset;
 }
